# GNN4Biomed

./: LICENSE  Model.ipynb  README.md  pyproject.toml
Misc/: Learning.ipynb
